array.island.Island.scala.error
Erreur de compilation :
Island:19: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Byte)Int
match expected type ?
    if(b%2=0){
        ^