array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var a:Int=0
  var nbNiveaux:Int=0
  var max:Int=0
  var l:Int=num.length
  for(i<-1 to l){
    if(num(i)>max){
      max=num(i)
    }
  }
  while(a!=max){
    var b:Int=0
    for(i<-1 to l){
      if(num(i)==a){
        b+=1
      }
    }
    if(b%2=0){
      nbNiveaux+=(b/2)
    }
    else{
      nbNiveaux+=((b-1)/2)+1
    }
    a+=1
  }
  return (nbNiveaux)
}